ingress-rules/rabbitmq-ingress-rule.yaml
# kubectl create secret tls ingress-secret --key mykey.key --cert STAR_singhritesh85_com.crt -n rabbitmq
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: rabbitmq
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  tls:
  - secretName: ingress-secret
  rules:
  - host: rabbitmq.singhritesh85.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
        pathType: Prefix
